fix: delete radius scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,7 +33,6 @@ li {
 
 ::-webkit-scrollbar-track {
   background-color: #1a1527;
-  border-radius: 20px;
 }
 
 ::-webkit-scrollbar-thumb {
